@@ -24,7 +24,7 @@ WriteMakefile(
         },
     },
     PREREQ_PM         => {
-        'WiringPi::API'       => 1.01,
+        'WiringPi::API'       => 1.03,
         'RPi::WiringPi::Constant'   => 0.02,
     },
     #OBJECT            => '$(O_FILES)', # link all the C files too
