@@ -53,6 +53,17 @@ DESCRIPTION
     functionality of this module may change, and things may break from
     time-to-time.
 
+    IMPORTANT (root vs sudo):
+
+    Using this software requires root privileges. There are two separate
+    modes you can select from... one where you must run your scripts as
+    root, the other where you can use a non-root user. For the latter, we
+    do make a few calls with sudo, so when in this mode, your user account
+    must have password-less sudo access to at minimum the gpio command line
+    utility. The default user account (pi) on Raspbian OS has this right by
+    default. We default to the non-root configuration. See the details in
+    the new method below for further details.
+
     This is the root module for the RPi::WiringPi system. It interfaces to
     a Raspberry Pi board, its accessories and its GPIO pins via the
     wiringPi <http://wiringpi.com> library through the Perl wrapper
@@ -65,10 +76,6 @@ DESCRIPTION
     $SIG{INT}, so that in the event of a crash, we can reset the Pi back to
     default settings, so components are not left in an inconsistent state.
     Component modules do none of these things.
-
-    This module also calls the setup initialization routines automatically,
-    where in the component modules, you have to do this manually. You also
-    need to clean up after yourself.
 
     There are a basic set of constants that can be imported. See
     RPi::WiringPi::Constant.
@@ -95,14 +102,29 @@ OPERATIONAL METHODS
 
     setup => $value
 
-      Optional. This option specifies which GPIO pin mapping (numbering
-      scheme) to use. wiringPi for wiringPi's mapping, physical to use the
-      pin numbers labelled on the board itself, or gpio use the Broadcom
-      (BCM) pin numbers. You can also specify none for testing purposes.
-      This will bypass running the setup routines.
+      Optional. This option specifies which pin mapping (numbering scheme)
+      to use.
 
-      system will also use BCM pin numbering, but in this setup mode, we
-      don't require root privileges to run.
+          wiringPi:   wiringPi's numbering
+          physical:   physical pin numbering
+          gpio:       GPIO numbering
+          system:     GPIO numbering (root not required in this mode)
+
+      You can also specify none for testing purposes. This will bypass
+      running the setup routines.
+
+      !!! system mode uses sudo !!!
+
+      system mode is the only mode where you do not need to run your
+      application as the root user. To this end, in wiringPi when using
+      system mode, you have to export and manually manipulate the pins with
+      the gpio application prior to using them. I have wrapped around this
+      limitation by making these calls with sudo for you, so that you don't
+      have to do anything different no matter the mode you're using.
+
+      When using system mode, the user running your application should be
+      able to at minimum call the <c>gpio</c> application without supplying
+      a password. The default Raspberry Pi user pi can do this by default.
 
       See wiringPi setup reference <http://wiringpi.com/reference/setup>
       for important details on the differences.
