@@ -6,7 +6,7 @@ use warnings;
 use parent 'WiringPi::API';
 use RPi::WiringPi::Constant qw(:all);
 
-our $VERSION = '0.99_05';
+our $VERSION = '0.99_06';
 
 sub new {
     return bless {}, shift;
