@@ -9,7 +9,7 @@ use parent 'RPi::WiringPi::Util';
 use Config;
 use RPi::WiringPi::Constant qw(:all);
 
-our $VERSION = '0.99_05';
+our $VERSION = '0.99_06';
 
 my $interrupts = {};
 
