@@ -7,7 +7,7 @@ use parent 'WiringPi::API';
 
 use RPi::WiringPi::Constant qw(:all);
 
-our $VERSION = '0.99_05';
+our $VERSION = '0.99_06';
 
 sub pin_to_gpio {
     my ($self, $pin, $scheme) = @_;
